# ChangeLog for sys-apps/hal
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/hal/Attic/ChangeLog,v 1.85 2006/04/29 03:09:40 steev Exp $

  29 Apr 2006; Steev Klimaszewski <steev@gentoo.org> hal-0.5.7-r1.ebuild:
  We now keepdir /media in hal as both gnome-mount and pmount can use it - Bug
  130795

  27 Apr 2006; Steev Klimaszewski <steev@gentoo.org> hal-0.5.7.ebuild,
  hal-0.5.7-r1.ebuild:
  hal 0.5.7 depends on /proc/mounts which is in 2.6.15, so we require at least
  that version now. Closes bug #127692. Thanks to Peter Clifton for reporting.

*hal-0.5.7-r1 (27 Apr 2006)

  27 Apr 2006; Saleem Abdulrasool <compnerd@gentoo.org>
  +files/hal-0.5.7-rescan-on-resume.patch, +hal-0.5.7-r1.ebuild:
  Adding patch for rescan on resume for gnome-power-manager

  19 Mar 2006; Doug Goldstein <cardoe@gentoo.org> hal-0.5.7.ebuild:
  autoreconf is not needed. fix doexec to doexe

*hal-0.5.7 (19 Mar 2006)

  19 Mar 2006; Doug Goldstein <cardoe@gentoo.org>
  +files/hal-0.5.7-drop-privs.patch, +files/hal-0.5.7-hald-scripts.patch,
  +files/hal-0.5.7-ignored-volumes.patch, +files/hal-0.5.7-part-table.patch,
  +files/hal-0.5.7-plugdev-allow-send.patch, +files/hal-0.5.7-pmu-fix.patch,
  +files/hal-0.5.7-sony-brightness.patch,
  +files/hal-0.5.7-unclean-unmount.patch, +hal-0.5.7.ebuild:
  rev bump but include a bunch of patches with the aim to make this our best
  HAL yet

  03 Feb 2006; Guy Martin <gmsoft@gentoo.org> hal-0.4.8.ebuild:
  Stable on hppa.

  03 Feb 2006; Guy Martin <gmsoft@gentoo.org> hal-0.5.5.1-r3.ebuild:
  Stable on hppa.

  02 Feb 2006; Aron Griffis <agriffis@gentoo.org> hal-0.5.5.1-r3.ebuild:
  Mark 0.5.5.1-r3 ~alpha

  02 Feb 2006; Aron Griffis <agriffis@gentoo.org> hal-0.5.5.1-r3.ebuild:
  Mark 0.5.5.1-r3 stable on ia64

  22 Jan 2006; Markus Rothe <corsair@gentoo.org> hal-0.5.5.1-r3.ebuild:
  Stable on ppc64

  22 Jan 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  hal-0.5.5.1-r3.ebuild: