@@ -86,30 +86,30 @@ DIST hal-0.4.7.tar.gz 1349064 size 1349064
 DIST hal-0.4.8.tar.gz 1353568 size 1353568
 DIST hal-0.5.5.1.tar.gz 1517882 size 1517882
 DIST hal-0.5.7.tar.gz 1528632 RMD160 342b00bea138ddf9f0f75e769612373bcf935d43 SHA256 63c78e9b9c8308914372f9a762b02fa057bca2c6a1c7478ab595ba0fa92781d5 size 1528632
-EBUILD hal-0.4.7-r2.ebuild 3446 RMD160 05290774f06802e866972fe13b64a481e2ab9945 SHA1 be3fffed3153d613489bbe395de283b8fcd7c716 SHA256 aa0496e084db863dc6e47d6fe3787b8d0237760dc0c5c33542905e2d9b8aa3f3 size 3446
-MD5 6620fb9a1606d84523f610671945560e hal-0.4.7-r2.ebuild 3446
-RMD160 05290774f06802e866972fe13b64a481e2ab9945 hal-0.4.7-r2.ebuild 3446
-SHA256 aa0496e084db863dc6e47d6fe3787b8d0237760dc0c5c33542905e2d9b8aa3f3 hal-0.4.7-r2.ebuild 3446
-EBUILD hal-0.4.8.ebuild 3425 RMD160 9434a156c818fcec624677fd46802ae4fe5189d2 SHA1 cc08ee379ffbd65250b0f9acb1165ac9d058d818 SHA256 20ab981c2b2d490f6cf6358d36414614e5d5c2e9d2b1b4a2293a34d990e7d8ff size 3425
-MD5 e66a530899ba112d53d541d9930f12f7 hal-0.4.8.ebuild 3425
-RMD160 9434a156c818fcec624677fd46802ae4fe5189d2 hal-0.4.8.ebuild 3425
-SHA256 20ab981c2b2d490f6cf6358d36414614e5d5c2e9d2b1b4a2293a34d990e7d8ff hal-0.4.8.ebuild 3425
-EBUILD hal-0.5.5.1-r3.ebuild 3780 RMD160 376b757b599b4788d4dce9d0d2aa39dddc90d95e SHA1 df55525a1b0c85d5c50ca62daf96e173db1d4ebe SHA256 7befb86e2b140e7a760afcb118fe090ee0913d389cf39037203d03fd9fba454d size 3780
-MD5 59bbdd78799e3dd45740cba91144c873 hal-0.5.5.1-r3.ebuild 3780
-RMD160 376b757b599b4788d4dce9d0d2aa39dddc90d95e hal-0.5.5.1-r3.ebuild 3780
-SHA256 7befb86e2b140e7a760afcb118fe090ee0913d389cf39037203d03fd9fba454d hal-0.5.5.1-r3.ebuild 3780
-EBUILD hal-0.5.7-r1.ebuild 5294 RMD160 eda1046da7ae4d0ae16595328c754126d021f3af SHA1 cdd2cb9d4443e122b3e0aeb2908bf7d4d86eff04 SHA256 19cd201585b7693db665dc882e9207a4b3b459999e19737dcccb5a885b044e53 size 5294
-MD5 63cd3c4134f20500531765fbd5f7acf8 hal-0.5.7-r1.ebuild 5294
-RMD160 eda1046da7ae4d0ae16595328c754126d021f3af hal-0.5.7-r1.ebuild 5294
-SHA256 19cd201585b7693db665dc882e9207a4b3b459999e19737dcccb5a885b044e53 hal-0.5.7-r1.ebuild 5294
-EBUILD hal-0.5.7.ebuild 5059 RMD160 e33bdd06bad9d29fb8a8867a86c2b7d6d36e22c2 SHA1 c94785f2da021d9704d382f9a34921d207c167e6 SHA256 757e9f9dd9005a450ddb9052776e7ad20742ffbcfb12ac6c63b87fae5c7a7c80 size 5059
-MD5 957571de4c7fad37d5b71193791e18ac hal-0.5.7.ebuild 5059
-RMD160 e33bdd06bad9d29fb8a8867a86c2b7d6d36e22c2 hal-0.5.7.ebuild 5059
-SHA256 757e9f9dd9005a450ddb9052776e7ad20742ffbcfb12ac6c63b87fae5c7a7c80 hal-0.5.7.ebuild 5059
-MISC ChangeLog 12216 RMD160 eb5738b0d742596df45f545444300d9ca2ba54f3 SHA1 4453a8e537c466787a0d40f79baa180caa77b0c4 SHA256 29378009613424a24d76699916593204ef5da2cb0ec46af94bc5b22be80507d3 size 12216
-MD5 548e1f31c507a9ef3a67dc131cb1ede5 ChangeLog 12216
-RMD160 eb5738b0d742596df45f545444300d9ca2ba54f3 ChangeLog 12216
-SHA256 29378009613424a24d76699916593204ef5da2cb0ec46af94bc5b22be80507d3 ChangeLog 12216
+EBUILD hal-0.4.7-r2.ebuild 3429 RMD160 79839d470277cd22e578802a4fae533fa17b9e43 SHA1 c62397e7e5ede121ed785f124e05c70ac41c8853 SHA256 b204f8aa83e5a746bd28cc40c58e1fc465e9a41d624dd26a0c05d1cab4d16c11 size 3429
+MD5 9be5fc181975453c4f2ff2e7b16f3b74 hal-0.4.7-r2.ebuild 3429
+RMD160 79839d470277cd22e578802a4fae533fa17b9e43 hal-0.4.7-r2.ebuild 3429
+SHA256 b204f8aa83e5a746bd28cc40c58e1fc465e9a41d624dd26a0c05d1cab4d16c11 hal-0.4.7-r2.ebuild 3429
+EBUILD hal-0.4.8.ebuild 3408 RMD160 29f659615ffc1ea4cd2c4324942ef132cf48394a SHA1 9009dd9b9c2f482312e1a65a8cfcf9ede114cfee SHA256 0a361351e250dedff81dbaf7a8dd948e3e53f5cc6a91d5db28e382658b9d4c7f size 3408
+MD5 7bcb11b155567c678fcbe8eccdbbebf6 hal-0.4.8.ebuild 3408
+RMD160 29f659615ffc1ea4cd2c4324942ef132cf48394a hal-0.4.8.ebuild 3408
+SHA256 0a361351e250dedff81dbaf7a8dd948e3e53f5cc6a91d5db28e382658b9d4c7f hal-0.4.8.ebuild 3408
+EBUILD hal-0.5.5.1-r3.ebuild 3763 RMD160 4592cecad3f5c5abca70f2d2bd869ee858683adf SHA1 4a580c9daa55083af012a8525af3d414f68430f0 SHA256 7d7b90085506323245e95ad8f4653afd43b2de1d372cb4e3734bdc15431d856b size 3763
+MD5 813ad51e321b94f0156dfe36e9f19ac9 hal-0.5.5.1-r3.ebuild 3763
+RMD160 4592cecad3f5c5abca70f2d2bd869ee858683adf hal-0.5.5.1-r3.ebuild 3763
+SHA256 7d7b90085506323245e95ad8f4653afd43b2de1d372cb4e3734bdc15431d856b hal-0.5.5.1-r3.ebuild 3763
+EBUILD hal-0.5.7-r1.ebuild 5278 RMD160 1c9263fb2ef4c628f61d576450c6f012f2c19cfd SHA1 8f1d0939c91460a86b012ec379eacf77b8e7f787 SHA256 057e8b0341edb5d52a3403b7d4bdf2135d0fc8a80f01aa34b3595db7c68ebe61 size 5278
+MD5 60ce8bbb6414f437ecf2a1a0756c8a2c hal-0.5.7-r1.ebuild 5278
+RMD160 1c9263fb2ef4c628f61d576450c6f012f2c19cfd hal-0.5.7-r1.ebuild 5278
+SHA256 057e8b0341edb5d52a3403b7d4bdf2135d0fc8a80f01aa34b3595db7c68ebe61 hal-0.5.7-r1.ebuild 5278
+EBUILD hal-0.5.7.ebuild 5043 RMD160 1ef68363d3e3df3b5714a02cbd7652a5146616d1 SHA1 8a59e8414482710b5f3543983492245a25d5d963 SHA256 078d056f53abd974bcfe7e32c4e7ff18506e2847476758e56e68a27c613fcb75 size 5043
+MD5 b2c6466417f81e53acc48e428a33c2a4 hal-0.5.7.ebuild 5043
+RMD160 1ef68363d3e3df3b5714a02cbd7652a5146616d1 hal-0.5.7.ebuild 5043
+SHA256 078d056f53abd974bcfe7e32c4e7ff18506e2847476758e56e68a27c613fcb75 hal-0.5.7.ebuild 5043
+MISC ChangeLog 12518 RMD160 26e459723bdd7088d2747c149abfe36a49c64968 SHA1 1068f5318855c5604169a8a31a67684e03e58d35 SHA256 eed0a679bfffe535ec51e80b35c56d46d4e40f4a0182ba21cb31ca9ddb0f636d size 12518
+MD5 45c84a9de9ff210fce637c09c4c27e56 ChangeLog 12518
+RMD160 26e459723bdd7088d2747c149abfe36a49c64968 ChangeLog 12518
+SHA256 eed0a679bfffe535ec51e80b35c56d46d4e40f4a0182ba21cb31ca9ddb0f636d ChangeLog 12518
 MISC metadata.xml 223 RMD160 ca8850c4808c8972fe9995c456578ff23cb4b3fb SHA1 28aa498172fa4c6f437adb79913ae16f4deb0c0c SHA256 49dd14861ed993df9f3509f82bb7f77e524b4b6c0e137677bb9f873d9cd8541d size 223
 MD5 885e3073744523eaf2450514a311758b metadata.xml 223
 RMD160 ca8850c4808c8972fe9995c456578ff23cb4b3fb metadata.xml 223
