@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/hal/Attic/hal-0.5.5.1-r3.ebuild,v 1.12 2006/02/04 22:32:51 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/hal/Attic/hal-0.5.5.1-r3.ebuild,v 1.13 2006/05/01 10:11:37 steev Exp $
 
 inherit eutils linux-info debug
 
@@ -110,7 +110,7 @@ src_install() {
 	# initscript
 	newinitd "${FILESDIR}"/0.5-hald.rc hald
 
-	dodoc AUTHORS COPYING ChangeLog INSTALL NEWS README
+	dodoc AUTHORS ChangeLog NEWS README
 
 	# Script to unmount devices if they are yanked out (from upstream)
 	exeinto /etc/dev.d/default
