@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/hal/Attic/hal-0.5.7-r1.ebuild,v 1.3 2006/04/29 03:09:40 steev Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/hal/Attic/hal-0.5.7-r1.ebuild,v 1.4 2006/05/01 10:11:37 steev Exp $
 
 inherit eutils linux-info debug
 
@@ -146,7 +146,7 @@ src_install() {
 	# initscript
 	newinitd "${FILESDIR}"/0.5-hald.rc hald
 
-	dodoc AUTHORS COPYING ChangeLog INSTALL NEWS README
+	dodoc AUTHORS ChangeLog NEWS README
 
 	# Script to unmount devices if they are yanked out (from upstream)
 	exeinto /etc/dev.d/default
