@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/hal
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/hal/Attic/ChangeLog,v 1.85 2006/04/29 03:09:40 steev Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/hal/Attic/ChangeLog,v 1.86 2006/05/01 10:11:37 steev Exp $
+
+  01 May 2006; Steev Klimaszewski <steev@gentoo.org> hal-0.4.7-r2.ebuild,
+  hal-0.4.8.ebuild, hal-0.5.5.1-r3.ebuild, hal-0.5.7.ebuild,
+  hal-0.5.7-r1.ebuild:
+  Don't install the INSTALL or COPYING files.  They are available elsewhere and
+  just take up disk space.  No revbump just to remove 2 files.
 
   29 Apr 2006; Steev Klimaszewski <steev@gentoo.org> hal-0.5.7-r1.ebuild:
   We now keepdir /media in hal as both gnome-mount and pmount can use it - Bug
